--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet"
+        type="text/css"
+    />
+
+    <title>Vernal</title>
 </head>
 <body>
-    in progress...
+    <h1>V</h1>
+    <img src="./src/images/v3-8.png" alt="testImage" width="200"/>
+    <p>in progress, esto sera un muy largo viaje:D</p>
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
