--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <title>Vernal</title>
 </head>
 <body>
-    <h1>V</h1>
-    <img src="./src/images/v3-8.png" alt="testImage" width="200"/>
+    <h1>loading..</h1>
+    <img id="headImage" src="src/images/V estandar.png" alt="testImage" width="200"/>
     <p>in progress, esto sera un muy largo viaje:D</p>
 
     <script src="scripts/main.js"></script>
