--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     <h1>loading..</h1>
-    <img id="headImage" src="src/images/V estandar.png" alt="testImage" width="200"/>
-    <p>in progress, esto sera un muy largo viaje:D</p>
+    <!-- <img id="headImage" src="src/images/V estandar.png" alt="testImage" width="200"/> -->
+    <p>pagina en progreso.. esto tomara un tiempo....</p>
 
     <script src="scripts/main.js"></script>
 </body>
